--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
   <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>
 </template>
 <script src="js/utils.js"></script>
-<script src="js/page.js"></script>
-<script src="js/objects.js"></script>
+<script src="js/main.js"></script>
+<script src="js/create-objects.js"></script>
 <script src="js/offer.js"></script>
 <script src="js/pins.js"></script>
 <script src="js/form.js"></script>
