--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
 </template>
 <script src="js/utils.js"></script>
 <script src="js/main.js"></script>
-<script src="js/create-objects.js"></script>
+<script src="js/backend.js"></script>
+<script src="js/data.js"></script>
 <script src="js/offer.js"></script>
 <script src="js/pins.js"></script>
 <script src="js/form.js"></script>
