--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 <script src="js/utils.js"></script>
 <script src="js/main.js"></script>
 <script src="js/backend.js"></script>
-<script src="js/data.js"></script>
+<!--<script src="js/data.js"></script>-->
 <script src="js/offer.js"></script>
-<script src="js/pins.js"></script>
 <script src="js/form.js"></script>
 <script src="js/main-pin.js"></script>
+<script src="js/pins.js"></script>
 </body>
 </html>
