--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <section class="notice">
     <h2 class="notice__title">Ваше объявление</h2>
 
-    <form class="ad-form ad-form--disabled" method="post" enctype="multipart/form-data" autocomplete="off">
+    <form class="ad-form ad-form--disabled" method="post" enctype="multipart/form-data" action="https://js.dump.academy/keksobooking/" autocomplete="off">
       <fieldset class="ad-form-header">
         <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
         <div class="ad-form-header__upload">
@@ -203,7 +203,7 @@
       </fieldset>
 
       <fieldset class="ad-form__element ad-form__element--submit">
-        <button class="ad-form__submit" type="submit">Опубликовать</button>
+        <button class="ad-form__submit" type="submit" formtarget="_blank">Опубликовать</button>
         или <button class="ad-form__reset" type="reset">очистить</button>
       </fieldset>
     </form>
