--- a/index.html
+++ b/index.html
@@ -273,5 +273,6 @@
 <script src="js/main-pin.js"></script>
 <script src="js/pins.js"></script>
 <script src="js/main.js"></script>
+<script src="js/map-filters.js"></script>
 </body>
 </html>
