--- a/index.html
+++ b/index.html
@@ -274,5 +274,6 @@
 <script src="js/pins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/map-filters.js"></script>
+<script src="js/message.js"></script>
 </body>
 </html>
